# internals/server/server.go
@@ -31,12 +31,10 @@ func NewRouter(customerHandler *customer.Handler,
 		r.Get("/customers/{id}/accounts", accountHandler.GetByCustomerId)
 		r.Post("/customers/{id}/accounts", accountHandler.Create)
 
-		r.Route("/accounts", func(r chi.Router) {
-			r.Post("/", accountHandler.Create)
-			r.Get("/", accountHandler.GetByCustomerId)
-			r.Get("/{id}", accountHandler.GetById)
-			r.Post("/{id}/deposit", accountHandler.Deposit)
-		})
+		r.Post("/accounts", accountHandler.Create)
+		r.Get("/accounts", accountHandler.GetByCustomerId)
+		r.Get("/accounts/{id}", accountHandler.GetById)
+		r.Post("/accounts/{id}/deposit", accountHandler.Deposit)
 
 	})
 
